parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    GENERATE_RAYFILES
    LIGHT
    TEXTURE
    SAVE_COORDS
    SHADING_TYPE
    CAMERA
    SHADING
    FOCAL
    WEB
    CO
    SAVE_KNOBS
    TWEEN
    MESH
    AMBIENT
    CONSTANTS

Grammar

Rule 0     S' -> stuff
Rule 1     stuff -> <empty>
Rule 2     stuff -> statement stuff
Rule 3     statement -> COMMENT
Rule 4     statement -> FRAMES INT
Rule 5     statement -> BASENAME TEXT
Rule 6     statement -> VARY SYMBOL INT INT NUMBER NUMBER
Rule 7     statement -> POP
Rule 8     statement -> PUSH
Rule 9     statement -> SCREEN INT INT
Rule 10    statement -> SCREEN
Rule 11    statement -> SAVE
Rule 12    statement -> SAVE TEXT
Rule 13    statement -> DISPLAY TEXT
Rule 14    statement -> DISPLAY
Rule 15    statement -> SET SYMBOL NUMBER
Rule 16    statement -> SET_KNOBS NUMBER
Rule 17    statement -> SPHERE NUMBER NUMBER NUMBER NUMBER INT INT
Rule 18    statement -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 19    statement -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
Rule 20    statement -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 21    statement -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 22    statement -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 23    statement -> CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 24    statement -> CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 25    statement -> BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 26    statement -> BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 27    statement -> HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
Rule 28    statement -> HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 29    statement -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 30    statement -> MOVE NUMBER NUMBER NUMBER
Rule 31    statement -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 32    statement -> SCALE NUMBER NUMBER NUMBER
Rule 33    statement -> ROTATE XYZ NUMBER SYMBOL
Rule 34    statement -> ROTATE XYZ NUMBER
Rule 35    SYMBOL -> XYZ
Rule 36    SYMBOL -> ID
Rule 37    TEXT -> SYMBOL
Rule 38    TEXT -> STRING
Rule 39    NUMBER -> DOUBLE
Rule 40    NUMBER -> INT

Terminals, with rules where they appear

AMBIENT              : 
BASENAME             : 5
BEZIER               : 25 26
BOX                  : 21
CAMERA               : 
CIRCLE               : 23 24
CO                   : 
COMMENT              : 3
CONSTANTS            : 
DISPLAY              : 13 14
DOUBLE               : 39
FOCAL                : 
FRAMES               : 4
GENERATE_RAYFILES    : 
HERMITE              : 27 28
ID                   : 36
INT                  : 4 6 6 9 9 17 17 19 19 24 25 27 40
LIGHT                : 
LINE                 : 22
MESH                 : 
MOVE                 : 29 30
POP                  : 7
PUSH                 : 8
ROTATE               : 33 34
SAVE                 : 11 12
SAVE_COORDS          : 
SAVE_KNOBS           : 
SCALE                : 31 32
SCREEN               : 9 10
SET                  : 15
SET_KNOBS            : 16
SHADING              : 
SHADING_TYPE         : 
SPHERE               : 17 18
STRING               : 38
TEXTURE              : 
TORUS                : 19 20
TWEEN                : 
VARY                 : 6
WEB                  : 
XYZ                  : 33 34 35
error                : 

Nonterminals, with rules where they appear

NUMBER               : 6 6 15 16 17 17 17 17 18 18 18 18 19 19 19 19 19 20 20 20 20 20 21 21 21 21 21 21 22 22 22 22 22 22 23 23 23 23 23 23 23 24 24 24 24 24 24 24 25 25 25 25 25 25 25 25 25 25 25 25 26 26 26 26 26 26 26 26 26 26 26 26 27 27 27 27 27 27 27 27 27 27 27 27 28 28 28 28 28 28 28 28 28 28 28 28 29 29 29 30 30 30 31 31 31 32 32 32 33 34
SYMBOL               : 6 15 29 31 33 37
TEXT                 : 5 12 13
statement            : 2
stuff                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . stuff
    (1) stuff -> .
    (2) stuff -> . statement stuff
    (3) statement -> . COMMENT
    (4) statement -> . FRAMES INT
    (5) statement -> . BASENAME TEXT
    (6) statement -> . VARY SYMBOL INT INT NUMBER NUMBER
    (7) statement -> . POP
    (8) statement -> . PUSH
    (9) statement -> . SCREEN INT INT
    (10) statement -> . SCREEN
    (11) statement -> . SAVE
    (12) statement -> . SAVE TEXT
    (13) statement -> . DISPLAY TEXT
    (14) statement -> . DISPLAY
    (15) statement -> . SET SYMBOL NUMBER
    (16) statement -> . SET_KNOBS NUMBER
    (17) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER INT INT
    (18) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (19) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
    (20) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (21) statement -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) statement -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (23) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (25) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (26) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (27) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (28) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (29) statement -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (30) statement -> . MOVE NUMBER NUMBER NUMBER
    (31) statement -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (32) statement -> . SCALE NUMBER NUMBER NUMBER
    (33) statement -> . ROTATE XYZ NUMBER SYMBOL
    (34) statement -> . ROTATE XYZ NUMBER

    $end            reduce using rule 1 (stuff -> .)
    COMMENT         shift and go to state 9
    FRAMES          shift and go to state 6
    BASENAME        shift and go to state 3
    VARY            shift and go to state 5
    POP             shift and go to state 12
    PUSH            shift and go to state 15
    SCREEN          shift and go to state 16
    SAVE            shift and go to state 23
    DISPLAY         shift and go to state 8
    SET             shift and go to state 10
    SET_KNOBS       shift and go to state 13
    SPHERE          shift and go to state 18
    TORUS           shift and go to state 17
    BOX             shift and go to state 1
    LINE            shift and go to state 7
    CIRCLE          shift and go to state 22
    BEZIER          shift and go to state 20
    HERMITE         shift and go to state 11
    MOVE            shift and go to state 4
    SCALE           shift and go to state 2
    ROTATE          shift and go to state 19

    stuff                          shift and go to state 21
    statement                      shift and go to state 14

state 1

    (21) statement -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (39) NUMBER -> . DOUBLE
    (40) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 26

state 2

    (31) statement -> SCALE . NUMBER NUMBER NUMBER SYMBOL
    (32) statement -> SCALE . NUMBER NUMBER NUMBER
    (39) NUMBER -> . DOUBLE
    (40) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 27

state 3

    (5) statement -> BASENAME . TEXT
    (37) TEXT -> . SYMBOL
    (38) TEXT -> . STRING
    (35) SYMBOL -> . XYZ
    (36) SYMBOL -> . ID

    STRING          shift and go to state 28
    XYZ             shift and go to state 31
    ID              shift and go to state 32

    TEXT                           shift and go to state 29
    SYMBOL                         shift and go to state 30

state 4

    (29) statement -> MOVE . NUMBER NUMBER NUMBER SYMBOL
    (30) statement -> MOVE . NUMBER NUMBER NUMBER
    (39) NUMBER -> . DOUBLE
    (40) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 33

state 5

    (6) statement -> VARY . SYMBOL INT INT NUMBER NUMBER
    (35) SYMBOL -> . XYZ
    (36) SYMBOL -> . ID

    XYZ             shift and go to state 31
    ID              shift and go to state 32

    SYMBOL                         shift and go to state 34

state 6

    (4) statement -> FRAMES . INT

    INT             shift and go to state 35


state 7

    (22) statement -> LINE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (39) NUMBER -> . DOUBLE
    (40) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 36

state 8

    (13) statement -> DISPLAY . TEXT
    (14) statement -> DISPLAY .
    (37) TEXT -> . SYMBOL
    (38) TEXT -> . STRING
    (35) SYMBOL -> . XYZ
    (36) SYMBOL -> . ID

    COMMENT         reduce using rule 14 (statement -> DISPLAY .)
    FRAMES          reduce using rule 14 (statement -> DISPLAY .)
    BASENAME        reduce using rule 14 (statement -> DISPLAY .)
    VARY            reduce using rule 14 (statement -> DISPLAY .)
    POP             reduce using rule 14 (statement -> DISPLAY .)
    PUSH            reduce using rule 14 (statement -> DISPLAY .)
    SCREEN          reduce using rule 14 (statement -> DISPLAY .)
    SAVE            reduce using rule 14 (statement -> DISPLAY .)
    DISPLAY         reduce using rule 14 (statement -> DISPLAY .)
    SET             reduce using rule 14 (statement -> DISPLAY .)
    SET_KNOBS       reduce using rule 14 (statement -> DISPLAY .)
    SPHERE          reduce using rule 14 (statement -> DISPLAY .)
    TORUS           reduce using rule 14 (statement -> DISPLAY .)
    BOX             reduce using rule 14 (statement -> DISPLAY .)
    LINE            reduce using rule 14 (statement -> DISPLAY .)
    CIRCLE          reduce using rule 14 (statement -> DISPLAY .)
    BEZIER          reduce using rule 14 (statement -> DISPLAY .)
    HERMITE         reduce using rule 14 (statement -> DISPLAY .)
    MOVE            reduce using rule 14 (statement -> DISPLAY .)
    SCALE           reduce using rule 14 (statement -> DISPLAY .)
    ROTATE          reduce using rule 14 (statement -> DISPLAY .)
    $end            reduce using rule 14 (statement -> DISPLAY .)
    STRING          shift and go to state 28
    XYZ             shift and go to state 31
    ID              shift and go to state 32

    TEXT                           shift and go to state 37
    SYMBOL                         shift and go to state 30

state 9

    (3) statement -> COMMENT .

    COMMENT         reduce using rule 3 (statement -> COMMENT .)
    FRAMES          reduce using rule 3 (statement -> COMMENT .)
    BASENAME        reduce using rule 3 (statement -> COMMENT .)
    VARY            reduce using rule 3 (statement -> COMMENT .)
    POP             reduce using rule 3 (statement -> COMMENT .)
    PUSH            reduce using rule 3 (statement -> COMMENT .)
    SCREEN          reduce using rule 3 (statement -> COMMENT .)
    SAVE            reduce using rule 3 (statement -> COMMENT .)
    DISPLAY         reduce using rule 3 (statement -> COMMENT .)
    SET             reduce using rule 3 (statement -> COMMENT .)
    SET_KNOBS       reduce using rule 3 (statement -> COMMENT .)
    SPHERE          reduce using rule 3 (statement -> COMMENT .)
    TORUS           reduce using rule 3 (statement -> COMMENT .)
    BOX             reduce using rule 3 (statement -> COMMENT .)
    LINE            reduce using rule 3 (statement -> COMMENT .)
    CIRCLE          reduce using rule 3 (statement -> COMMENT .)
    BEZIER          reduce using rule 3 (statement -> COMMENT .)
    HERMITE         reduce using rule 3 (statement -> COMMENT .)
    MOVE            reduce using rule 3 (statement -> COMMENT .)
    SCALE           reduce using rule 3 (statement -> COMMENT .)
    ROTATE          reduce using rule 3 (statement -> COMMENT .)
    $end            reduce using rule 3 (statement -> COMMENT .)


state 10

    (15) statement -> SET . SYMBOL NUMBER
    (35) SYMBOL -> . XYZ
    (36) SYMBOL -> . ID

    XYZ             shift and go to state 31
    ID              shift and go to state 32

    SYMBOL                         shift and go to state 38

state 11

    (27) statement -> HERMITE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (28) statement -> HERMITE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (39) NUMBER -> . DOUBLE
    (40) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 39

state 12

    (7) statement -> POP .

    COMMENT         reduce using rule 7 (statement -> POP .)
    FRAMES          reduce using rule 7 (statement -> POP .)
    BASENAME        reduce using rule 7 (statement -> POP .)
    VARY            reduce using rule 7 (statement -> POP .)
    POP             reduce using rule 7 (statement -> POP .)
    PUSH            reduce using rule 7 (statement -> POP .)
    SCREEN          reduce using rule 7 (statement -> POP .)
    SAVE            reduce using rule 7 (statement -> POP .)
    DISPLAY         reduce using rule 7 (statement -> POP .)
    SET             reduce using rule 7 (statement -> POP .)
    SET_KNOBS       reduce using rule 7 (statement -> POP .)
    SPHERE          reduce using rule 7 (statement -> POP .)
    TORUS           reduce using rule 7 (statement -> POP .)
    BOX             reduce using rule 7 (statement -> POP .)
    LINE            reduce using rule 7 (statement -> POP .)
    CIRCLE          reduce using rule 7 (statement -> POP .)
    BEZIER          reduce using rule 7 (statement -> POP .)
    HERMITE         reduce using rule 7 (statement -> POP .)
    MOVE            reduce using rule 7 (statement -> POP .)
    SCALE           reduce using rule 7 (statement -> POP .)
    ROTATE          reduce using rule 7 (statement -> POP .)
    $end            reduce using rule 7 (statement -> POP .)


state 13

    (16) statement -> SET_KNOBS . NUMBER
    (39) NUMBER -> . DOUBLE
    (40) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 40

state 14

    (2) stuff -> statement . stuff
    (1) stuff -> .
    (2) stuff -> . statement stuff
    (3) statement -> . COMMENT
    (4) statement -> . FRAMES INT
    (5) statement -> . BASENAME TEXT
    (6) statement -> . VARY SYMBOL INT INT NUMBER NUMBER
    (7) statement -> . POP
    (8) statement -> . PUSH
    (9) statement -> . SCREEN INT INT
    (10) statement -> . SCREEN
    (11) statement -> . SAVE
    (12) statement -> . SAVE TEXT
    (13) statement -> . DISPLAY TEXT
    (14) statement -> . DISPLAY
    (15) statement -> . SET SYMBOL NUMBER
    (16) statement -> . SET_KNOBS NUMBER
    (17) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER INT INT
    (18) statement -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (19) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
    (20) statement -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (21) statement -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) statement -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (23) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) statement -> . CIRCLE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (25) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (26) statement -> . BEZIER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (27) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (28) statement -> . HERMITE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (29) statement -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (30) statement -> . MOVE NUMBER NUMBER NUMBER
    (31) statement -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (32) statement -> . SCALE NUMBER NUMBER NUMBER
    (33) statement -> . ROTATE XYZ NUMBER SYMBOL
    (34) statement -> . ROTATE XYZ NUMBER

    $end            reduce using rule 1 (stuff -> .)
    COMMENT         shift and go to state 9
    FRAMES          shift and go to state 6
    BASENAME        shift and go to state 3
    VARY            shift and go to state 5
    POP             shift and go to state 12
    PUSH            shift and go to state 15
    SCREEN          shift and go to state 16
    SAVE            shift and go to state 23
    DISPLAY         shift and go to state 8
    SET             shift and go to state 10
    SET_KNOBS       shift and go to state 13
    SPHERE          shift and go to state 18
    TORUS           shift and go to state 17
    BOX             shift and go to state 1
    LINE            shift and go to state 7
    CIRCLE          shift and go to state 22
    BEZIER          shift and go to state 20
    HERMITE         shift and go to state 11
    MOVE            shift and go to state 4
    SCALE           shift and go to state 2
    ROTATE          shift and go to state 19

    stuff                          shift and go to state 41
    statement                      shift and go to state 14

state 15

    (8) statement -> PUSH .

    COMMENT         reduce using rule 8 (statement -> PUSH .)
    FRAMES          reduce using rule 8 (statement -> PUSH .)
    BASENAME        reduce using rule 8 (statement -> PUSH .)
    VARY            reduce using rule 8 (statement -> PUSH .)
    POP             reduce using rule 8 (statement -> PUSH .)
    PUSH            reduce using rule 8 (statement -> PUSH .)
    SCREEN          reduce using rule 8 (statement -> PUSH .)
    SAVE            reduce using rule 8 (statement -> PUSH .)
    DISPLAY         reduce using rule 8 (statement -> PUSH .)
    SET             reduce using rule 8 (statement -> PUSH .)
    SET_KNOBS       reduce using rule 8 (statement -> PUSH .)
    SPHERE          reduce using rule 8 (statement -> PUSH .)
    TORUS           reduce using rule 8 (statement -> PUSH .)
    BOX             reduce using rule 8 (statement -> PUSH .)
    LINE            reduce using rule 8 (statement -> PUSH .)
    CIRCLE          reduce using rule 8 (statement -> PUSH .)
    BEZIER          reduce using rule 8 (statement -> PUSH .)
    HERMITE         reduce using rule 8 (statement -> PUSH .)
    MOVE            reduce using rule 8 (statement -> PUSH .)
    SCALE           reduce using rule 8 (statement -> PUSH .)
    ROTATE          reduce using rule 8 (statement -> PUSH .)
    $end            reduce using rule 8 (statement -> PUSH .)


state 16

    (9) statement -> SCREEN . INT INT
    (10) statement -> SCREEN .

    INT             shift and go to state 42
    COMMENT         reduce using rule 10 (statement -> SCREEN .)
    FRAMES          reduce using rule 10 (statement -> SCREEN .)
    BASENAME        reduce using rule 10 (statement -> SCREEN .)
    VARY            reduce using rule 10 (statement -> SCREEN .)
    POP             reduce using rule 10 (statement -> SCREEN .)
    PUSH            reduce using rule 10 (statement -> SCREEN .)
    SCREEN          reduce using rule 10 (statement -> SCREEN .)
    SAVE            reduce using rule 10 (statement -> SCREEN .)
    DISPLAY         reduce using rule 10 (statement -> SCREEN .)
    SET             reduce using rule 10 (statement -> SCREEN .)
    SET_KNOBS       reduce using rule 10 (statement -> SCREEN .)
    SPHERE          reduce using rule 10 (statement -> SCREEN .)
    TORUS           reduce using rule 10 (statement -> SCREEN .)
    BOX             reduce using rule 10 (statement -> SCREEN .)
    LINE            reduce using rule 10 (statement -> SCREEN .)
    CIRCLE          reduce using rule 10 (statement -> SCREEN .)
    BEZIER          reduce using rule 10 (statement -> SCREEN .)
    HERMITE         reduce using rule 10 (statement -> SCREEN .)
    MOVE            reduce using rule 10 (statement -> SCREEN .)
    SCALE           reduce using rule 10 (statement -> SCREEN .)
    ROTATE          reduce using rule 10 (statement -> SCREEN .)
    $end            reduce using rule 10 (statement -> SCREEN .)


state 17

    (19) statement -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER INT INT
    (20) statement -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER
    (39) NUMBER -> . DOUBLE
    (40) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 43

state 18

    (17) statement -> SPHERE . NUMBER NUMBER NUMBER NUMBER INT INT
    (18) statement -> SPHERE . NUMBER NUMBER NUMBER NUMBER
    (39) NUMBER -> . DOUBLE
    (40) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 44

state 19

    (33) statement -> ROTATE . XYZ NUMBER SYMBOL
    (34) statement -> ROTATE . XYZ NUMBER

    XYZ             shift and go to state 45


state 20

    (25) statement -> BEZIER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (26) statement -> BEZIER . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (39) NUMBER -> . DOUBLE
    (40) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 46

state 21

    (0) S' -> stuff .



state 22

    (23) statement -> CIRCLE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) statement -> CIRCLE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER INT
    (39) NUMBER -> . DOUBLE
    (40) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 47

state 23

    (11) statement -> SAVE .
    (12) statement -> SAVE . TEXT
    (37) TEXT -> . SYMBOL
    (38) TEXT -> . STRING
    (35) SYMBOL -> . XYZ
    (36) SYMBOL -> . ID

    COMMENT         reduce using rule 11 (statement -> SAVE .)
    FRAMES          reduce using rule 11 (statement -> SAVE .)
    BASENAME        reduce using rule 11 (statement -> SAVE .)
    VARY            reduce using rule 11 (statement -> SAVE .)
    POP             reduce using rule 11 (statement -> SAVE .)
    PUSH            reduce using rule 11 (statement -> SAVE .)
    SCREEN          reduce using rule 11 (statement -> SAVE .)
    SAVE            reduce using rule 11 (statement -> SAVE .)
    DISPLAY         reduce using rule 11 (statement -> SAVE .)
    SET             reduce using rule 11 (statement -> SAVE .)
    SET_KNOBS       reduce using rule 11 (statement -> SAVE .)
    SPHERE          reduce using rule 11 (statement -> SAVE .)
    TORUS           reduce using rule 11 (statement -> SAVE .)
    BOX             reduce using rule 11 (statement -> SAVE .)
    LINE            reduce using rule 11 (statement -> SAVE .)
    CIRCLE          reduce using rule 11 (statement -> SAVE .)
    BEZIER          reduce using rule 11 (statement -> SAVE .)
    HERMITE         reduce using rule 11 (statement -> SAVE .)
    MOVE            reduce using rule 11 (statement -> SAVE .)
    SCALE           reduce using rule 11 (statement -> SAVE .)
    ROTATE          reduce using rule 11 (statement -> SAVE .)
    $end            reduce using rule 11 (statement -> SAVE .)
    STRING          shift and go to state 28
    XYZ             shift and go to state 31
    ID              shift and go to state 32

    TEXT                           shift and go to state 48
    SYMBOL                         shift and go to state 30

state 24

    (39) NUMBER -> DOUBLE .

    DOUBLE          reduce using rule 39 (NUMBER -> DOUBLE .)
    INT             reduce using rule 39 (NUMBER -> DOUBLE .)
    COMMENT         reduce using rule 39 (NUMBER -> DOUBLE .)
    FRAMES          reduce using rule 39 (NUMBER -> DOUBLE .)
    BASENAME        reduce using rule 39 (NUMBER -> DOUBLE .)
    VARY            reduce using rule 39 (NUMBER -> DOUBLE .)
    POP             reduce using rule 39 (NUMBER -> DOUBLE .)
    PUSH            reduce using rule 39 (NUMBER -> DOUBLE .)
    SCREEN          reduce using rule 39 (NUMBER -> DOUBLE .)
    SAVE            reduce using rule 39 (NUMBER -> DOUBLE .)
    DISPLAY         reduce using rule 39 (NUMBER -> DOUBLE .)
    SET             reduce using rule 39 (NUMBER -> DOUBLE .)
    SET_KNOBS       reduce using rule 39 (NUMBER -> DOUBLE .)
    SPHERE          reduce using rule 39 (NUMBER -> DOUBLE .)
    TORUS           reduce using rule 39 (NUMBER -> DOUBLE .)
    BOX             reduce using rule 39 (NUMBER -> DOUBLE .)
    LINE            reduce using rule 39 (NUMBER -> DOUBLE .)
    CIRCLE          reduce using rule 39 (NUMBER -> DOUBLE .)
    BEZIER          reduce using rule 39 (NUMBER -> DOUBLE .)
    HERMITE         reduce using rule 39 (NUMBER -> DOUBLE .)
    MOVE            reduce using rule 39 (NUMBER -> DOUBLE .)
    SCALE           reduce using rule 39 (NUMBER -> DOUBLE .)
    ROTATE          reduce using rule 39 (NUMBER -> DOUBLE .)
    $end            reduce using rule 39 (NUMBER -> DOUBLE .)
    XYZ             reduce using rule 39 (NUMBER -> DOUBLE .)
    ID              reduce using rule 39 (NUMBER -> DOUBLE .)


state 25

    (40) NUMBER -> INT .

    DOUBLE          reduce using rule 40 (NUMBER -> INT .)
    INT             reduce using rule 40 (NUMBER -> INT .)
    COMMENT         reduce using rule 40 (NUMBER -> INT .)
    FRAMES          reduce using rule 40 (NUMBER -> INT .)
    BASENAME        reduce using rule 40 (NUMBER -> INT .)
    VARY            reduce using rule 40 (NUMBER -> INT .)
    POP             reduce using rule 40 (NUMBER -> INT .)
    PUSH            reduce using rule 40 (NUMBER -> INT .)
    SCREEN          reduce using rule 40 (NUMBER -> INT .)
    SAVE            reduce using rule 40 (NUMBER -> INT .)
    DISPLAY         reduce using rule 40 (NUMBER -> INT .)
    SET             reduce using rule 40 (NUMBER -> INT .)
    SET_KNOBS       reduce using rule 40 (NUMBER -> INT .)
    SPHERE          reduce using rule 40 (NUMBER -> INT .)
    TORUS           reduce using rule 40 (NUMBER -> INT .)
    BOX             reduce using rule 40 (NUMBER -> INT .)
    LINE            reduce using rule 40 (NUMBER -> INT .)
    CIRCLE          reduce using rule 40 (NUMBER -> INT .)
    BEZIER          reduce using rule 40 (NUMBER -> INT .)
    HERMITE         reduce using rule 40 (NUMBER -> INT .)
    MOVE            reduce using rule 40 (NUMBER -> INT .)
    SCALE           reduce using rule 40 (NUMBER -> INT .)
    ROTATE          reduce using rule 40 (NUMBER -> INT .)
    $end            reduce using rule 40 (NUMBER -> INT .)
    XYZ             reduce using rule 40 (NUMBER -> INT .)
    ID              reduce using rule 40 (NUMBER -> INT .)


state 26

    (21) statement -> BOX NUMBER . NUMBER NUMBER NUMBER NUMBER NUMBER
    (39) NUMBER -> . DOUBLE
    (40) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 49

state 27

    (31) statement -> SCALE NUMBER . NUMBER NUMBER SYMBOL
    (32) statement -> SCALE NUMBER . NUMBER NUMBER
    (39) NUMBER -> . DOUBLE
    (40) NUMBER -> . INT

    DOUBLE          shift and go to state 24
    INT             shift and go to state 25

    NUMBER                         shift and go to state 50

state 28

    (38) TEXT -> STRING .

    COMMENT         reduce using rule 38 (TEXT -> STRING .)
    FRAMES          reduce using rule 38 (TEXT -> STRING .)
    BASENAME        reduce using rule 38 (TEXT -> STRING .)
    VARY            reduce using rule 38 (TEXT -> STRING .)
    POP             reduce using rule 38 (TEXT -> STRING .)
    PUSH            reduce using rule 38 (TEXT -> STRING .)
    SCREEN          reduce using rule 38 (TEXT -> STRING .)
    SAVE            reduce using rule 38 (TEXT -> STRING .)
    DISPLAY         reduce using rule 38 (TEXT -> STRING .)
    SET             reduce using rule 38 (TEXT -> STRING .)
    SET_KNOBS       reduce using rule 38 (TEXT -> STRING .)
    SPHERE          reduce using rule 38 (TEXT -> STRING .)
    TORUS           reduce using rule 38 (TEXT -> STRING .)
    BOX             reduce using rule 38 (TEXT -> STRING .)
    LINE            reduce using rule 38 (TEXT -> STRING .)
    CIRCLE          reduce using rule 38 (TEXT -> STRING .)
    BEZIER          reduce using rule 38 (TEXT -> STRING .)
    HERMITE         reduce using rule 38 (TEXT -> STRING .)
    MOVE            reduce using rule 38 (TEXT -> STRING .)
    SCALE           reduce using rule 38 (TEXT -> STRING .)
    ROTATE          reduce using rule 38 (TEXT -> STRING .)
    $end            reduce using rule 38 (TEXT -> STRING .)


state 29

    (5) statement -> BASENAME TEXT .
